eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank0ingress
spec:
  rules:
    - host: "api.simple-bank.org"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 80
    # - host: "*.foo.com"
    #   http:
    #     paths:
    #       - pathType: Prefix
    #         path: "/foo"
    #         backend:
    #           service:
    #             name: service2
    #             port:
    #               number: 80
